fixed spacing

--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@
 html, body {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #BDD4E7;
-    border: 0.2rem solid #8693AB;
     height: 100%;
     margin: 0;
     color: #212227;
@@ -40,6 +39,10 @@ button {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+}
+
+.handCard {
+    margin: 1rem;
 }
 button:hover {
     background-color: aliceblue;
